experiment with audio player

--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
@@ -61,4 +61,8 @@ i:hover {
   margin: 20px 0; /* Adjust the margin value to your preference */
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 h2,h1,h3 {text-align: center;}
