--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
@@ -36,6 +36,47 @@ i:hover {
   line-height: 1.428571429;
   border-radius: 15px;
 }
+
+.btn-listen {
+  background-color: #fff;
+  border: 1px solid var(--bs-primary-200);
+  padding: 7px 16px;
+  color: var(--bs-primary-600);
+}
+
+.btn-listen:hover {
+  background-color: var(--bs-primary-100);
+  border: 1px solid var(--bs-primary-200);
+  padding: 7px 16px !important;
+  color: var(--bs-primary-600);
+}
+
+
+
+.btn-evaluate {
+  background-color: #fff;
+  border: 1px solid var(--bs-success-500);
+  padding: 7px 16px !important;
+  color: var(--bs-success-500);
+}
+
+.btn-evaluate:hover {
+  background-color: var(--green);
+  border: 1px solid var(--green);
+  padding: 7px 16px;
+  color: var(--bs-white);
+}
+
+.btn-check:focus+.btn-evaluate,
+.btn-evaluate:focus {
+  border-radius: 6px;
+  border: 4px solid var(--bs-primary-100);
+  background-color: var(--bs-primary-100);
+  outline: 0;
+  box-shadow: 0 0 0 2px var(--bs-primary-600);
+}
+
+
 .btn-circle.btn-lg {
   width: 50px;
   height: 50px;
@@ -57,8 +98,19 @@ i:hover {
   margin-bottom: 20px; /* Adjust the margin value to your preference */
 }
 
+.card-header {
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
+}
+
 .card-separator {
   margin: 20px 0; /* Adjust the margin value to your preference */
+}
+
+.card {
+  height: max-content;
+  width: 100%;
 }
 
 .hidden {
@@ -66,3 +118,9 @@ i:hover {
 }
 
 h2,h1,h3 {text-align: center;}
+
+.instruction {
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
+}
