add and implement nationalities directive in icelandic

--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -128,11 +128,29 @@
                               </div>
                             <div class="form-group">
                                 <label for="nationality">{{'user.nationality' | translate}}</label>
-                                <select id="nationality" class="form-control form-select select2 "
-                                    formControlName="nationality" appAllNationalities>
-                                  <option value="" disabled selected hidden>{{ 'user.choose-nationality'| translate }}</option>
-                                </select>
-                            </div>
+
+                                  <ng-container *ngIf="is_icelandic; else englishNationalities">
+                                    <select
+                                      id="nationality"
+                                      class="form-control form-select select2"
+                                      formControlName="nationality"
+                                      appAllNationalitiesIS
+                                    >
+                                    <option value="" disabled selected hidden>{{ 'user.choose-nationality'| translate }}</option>
+                                    </select>
+                                  </ng-container>
+
+                                  <ng-template #englishNationalities>
+                                    <select
+                                      id="nationality"
+                                      class="form-control form-select select2"
+                                      formControlName="nationality"
+                                      appAllNationalitiesEN
+                                    >
+                                    <option value="" disabled selected hidden>{{ 'user.choose-nationality'| translate }}</option>
+                                    </select>
+                                  </ng-template>
+                              </div>
                             <div class="form-group">
                                 <div>
                                     <label>{{'user.langLevel'|translate}}</label>
