--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
@@ -6,11 +6,11 @@
                     <button class="btn btn-default btn-sm" type="button" routerLink="/topics">
                         <svg width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2.31629 3.99993L5.20379 6.88743L4.37896 7.71226L0.666626 3.99993L4.37896 0.287598L5.20379 1.11243L2.31629 3.99993Z" fill="#32324D"/>
-                            </svg> {{'topic.topics' | translate}} 
+                            </svg> {{'topic.topics' | translate}}
                      </button>
                 </li>
                 <li>
-                    <h3>{{'topic.lessons' | translate}}</h3>
+                    <h3 class="mx-3">{{'topic.lessons' | translate}}</h3>
                 </li>
             </div>
             <li>
