--- a/frontEndCaptini/src/styles.css
+++ b/frontEndCaptini/src/styles.css
@@ -5077,6 +5077,7 @@ fieldset:disabled .btn {
     flex-wrap: wrap;
     padding: 0 0;
     list-style: none;
+    margin: 0;
 }
 
 .breadcrumb-item+.breadcrumb-item {
