--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
@@ -46,13 +46,15 @@
 }
 
 .btn-listen:hover {
-  background-color: var(--bs-primary-100);
-  border: 1px solid var(--bs-primary-200);
+  background-color: var(--bs-primary-600);
   padding: 7px 16px !important;
-  color: var(--bs-primary-600);
+  color: #fff;
 }
 
-
+.btn-audio:hover {
+  padding: 7px 16px !important;
+  border: 0;
+}
 
 .btn-evaluate {
   background-color: #fff;
