Added styling to the user in the lleaderboard so that users can distinguish between themselves and others easily

--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.css
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.css
@@ -205,3 +205,9 @@
         width: auto;
     }
 }
+
+.list-group-item-glow {
+    box-shadow: 0 0 20px 5px rgba(35, 226, 35, 0.7); /* Adjust the values as needed */
+    background-color: var(--bs-success-200);
+    font-weight:bold;
+  }
