--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -51,7 +51,7 @@
                 </div>
                 <ul class="list-group" *ngIf="!loading">
 
-                    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of users.slice(3)">
+                    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of users.slice(3)" [class.list-group-item-glow]="item.showGlow">
                         <div class="item-content">
                             <img src="{{item.profile_photo}}" alt="">
                             <span class="ps-2">{{item.username}} ({{item.score}})</span>
