--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
@@ -62,7 +62,11 @@
                     <div class="card-title" *ngFor="let task of prompt.tasks">
                     <div class="card-body">
 
-                    <span class="letter"><h4>{{ task.task_text }}</h4></span>
+                    <span class="letter" [ngClass]="hasCorrection ? 'mb-2' : 'mb-4'"><h4>{{ task.task_text }}</h4></span>
+                    <div #phones>
+                      <!-- Phones for correction is added here -->
+                    </div>
+
                     <div class="mb-3">
                       <button mat-button class="btn btn-listen me-2" (click)="play_audio(task.audio_url)">
                         <i class="ri-voiceprint-fill"></i>
@@ -88,9 +92,9 @@
                       </button>
                     </div>
                     <div
-                    *ngIf="url && task.id == id_current_task">
+                    *ngIf="answered || url && task.id == id_current_task">
                       <button class="btn btn-evaluate me-2" >
-                        <i class="ri-check-double-fill" (click)="getScore()"></i>
+                        <i class="ri-check-double-fill" (click)="getScore();showPhones()"></i>
                         {{ 'audio.check' | translate}}
                       </button>
                       <span>{{'topic.score' | translate}}: {{score}}</span>
@@ -193,3 +197,4 @@
     </div>
   </section>
 </div>
+
