--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
@@ -62,44 +62,41 @@
                   <span *ngIf="prompt.flashcard_text" class="card-header"><h3 class="no-margin">{{ prompt.flashcard_text }}</h3></span>
 
                     <div class="card-title" *ngFor="let task of prompt.tasks">
-                    <div class="card-body">
-
-                    <div class="letter mb-2" #targetElement><h4>{{ task.task_text }}</h4></div>
-                    <div class="mb-3">
-                      <button mat-button class="btn btn-listen me-2" (click)="play_audio(task.audio_url)">
-                        <i class="ri-voiceprint-fill"></i>
-                        {{ 'audio.listen' | translate}}
-                      </button>
-                      <button mat-button class="btn btn-listen me-2" (click)="recording ? stopRecording() : initiateRecording(task.id)">
-                        <i [ngClass]="recording ? 'ri-mic-off-line' : 'ri-mic-line'"></i>
-                        {{ recording ? ('audio.stop' | translate) : ('audio.record' | translate)}}
-                      </button>
-                      <audio
-                      class="btn btn-audio"
-                      controls
-
-                      *ngIf="url && task.id == id_current_task"
-                      >
-                        <source [src]="sanitize()" />
-                        {{ task.id }}
-                        <i class="ri-play-fill"></i>
-                      </audio>
-                      <button class="btn btn-listen" >
-                        <i class="ri-share-fill" (click)="sendTask()"></i>
-                        {{ 'audio.share'|translate }}
-                      </button>
-                    </div>
-                    <div
-                    *ngIf="answered || url && task.id == id_current_task">
-                      <button class="btn btn-evaluate me-2" (click)="getScore();showPhones()">
-                        <i class="ri-check-double-fill"></i>
-                        {{ 'audio.check' | translate}}
-                      </button>
-                      <span>{{'topic.score' | translate}}: {{score}}</span>
+                      <div class="card-body">
+                        <div class="letter mb-2 phones" #targetElement><h4>{{ task.task_text }}</h4></div>
+                        <div class="mb-1">
+                          <button mat-button class="btn btn-listen me-2" (click)="play_audio(task.audio_url)">
+                            <i class="ri-voiceprint-fill"></i>
+                            {{ 'audio.listen' | translate}}
+                          </button>
+                          <button mat-button class="btn btn-listen me-2" (click)="recording ? stopRecording() : initiateRecording(task.id)">
+                            <i [ngClass]="recording ? 'ri-mic-off-line' : 'ri-mic-line'"></i>
+                            {{ recording ? ('audio.stop' | translate) : ('audio.record' | translate)}}
+                          </button>
+                        </div>
+                        <audio
+                        class="btn btn-audio mb-1"
+                        controls
+                        *ngIf="url && task.id == id_current_task"
+                        >
+                          <source [src]="sanitize()" />
+                          {{ task.id }}
+                          <i class="ri-play-fill"></i>
+                        </audio>
+                        <div
+                        *ngIf="answered || url && task.id == id_current_task">
+                          <button class="btn btn-evaluate me-2" (click)="getScore($event)">
+                            <i class="ri-check-double-fill"></i>
+                            {{ 'audio.check' | translate}}
+                          </button>
+                          <button class="btn btn-listen me-2" >
+                            <i class="ri-share-fill" (click)="sendTask()"></i>
+                            {{ 'audio.share'|translate }}
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-                </div>
                 </div>
               </div>
             </div>
