--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -92,25 +92,35 @@
                                 <p class="card-text text-end text-lg">3 days 02:36</p>
                             </div>
                         </div>
-                        <div class="card h78">
-                            <div class="card-body ">
-                                <h5 class="card-title"> Lessons completed</h5>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="progress">
-                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                    <p class="card-text txt-md ">60/100</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card h78">
+                        <div class="card h78" *ngIf="!loading && user">
                             <div class="card-body">
-                                <h5 class="card-title">Tests completed</h5>
+                                <h5 class="card-title">Lessons completed</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="progress">
-                                        <div class="progress-bar w-25" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" 
+                                             role="progressbar" 
+                                             [attr.aria-valuenow]="user?.completed_lessons" 
+                                             aria-valuemin="0" 
+                                             [attr.aria-valuemax]="user?.total_lessons" 
+                                             [style.width.%]="(user?.completed_lessons / user?.total_lessons) * 100"></div>
                                     </div>
-                                    <p class="card-text txt-md ">20/100</p>
+                                    <p class="card-text txt-md">{{user?.completed_lessons}}/{{user?.total_lessons}}</p>
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="card h78" *ngIf="!loading && user">
+                            <div class="card-body">
+                                <h5 class="card-title">Tasks completed</h5>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="progress">
+                                        <div class="progress-bar" 
+                                             role="progressbar" 
+                                             [attr.aria-valuenow]="user?.completed_tasks" 
+                                             aria-valuemin="0" 
+                                             [attr.aria-valuemax]="user?.total_tasks" 
+                                             [style.width.%]="(user?.completed_tasks / user?.total_tasks) * 100"></div>
+                                    </div>
+                                    <p class="card-text txt-md ">{{user?.completed_tasks}}/{{user?.total_tasks}}</p>
                                 </div>
                             </div>
                         </div>
