--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -84,6 +84,12 @@
                                 <p class="card-text text-end text-lg">{{user?.score}}</p>
                             </div>
                         </div>
+                        <div class="card h96 active" *ngIf="!loading && user">
+                            <div class="card-body">
+                                <h5 class="card-title">Your achievements (total tries)</h5>
+                                <p class="card-text text-end text-lg">{{user?.total_tries}}</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card h96">
@@ -121,6 +127,22 @@
                                              [style.width.%]="(user?.completed_tasks / user?.total_tasks) * 100"></div>
                                     </div>
                                     <p class="card-text txt-md ">{{user?.completed_tasks}}/{{user?.total_tasks}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card h78" *ngIf="!loading && user">
+                            <div class="card-body">
+                                <h5 class="card-title">Topics completed</h5>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="progress">
+                                        <div class="progress-bar" 
+                                             role="progressbar" 
+                                             [attr.aria-valuenow]="user?.completed_topics" 
+                                             aria-valuemin="0" 
+                                             [attr.aria-valuemax]="user?.total_topics" 
+                                             [style.width.%]="(user?.completed_topics / user?.total_topics) * 100"></div>
+                                    </div>
+                                    <p class="card-text txt-md ">{{user?.completed_topics}}/{{user?.total_topics}}</p>
                                 </div>
                             </div>
                         </div>
