--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -249,14 +249,18 @@
             </div>
             <div class="tab-pane fade" id="pills-password" role="tabpanel" aria-labelledby="pills-password-tab">
                 <form [formGroup]="passwordForm">
-                    <div class="form-group">
-                        <label for="fullname">{{'user.old-password' | translate}}</label>
-                        <input type="password" class="form-control" id="_oldPass" formControlName="_oldPass">
+                  <div class="mb-3">
+                    <label for="fullname" class="form-label">{{'user.old-password' | translate}}</label>
+                    <div class="input-group">
+                        <input type="password" class="form-control" placeholder="*****" id="_oldPass" formControlName="_oldPass" aria-describedby="basic-addon1" style="border-right: none;" appShowPassword>
                     </div>
-                    <div class="form-group">
-                        <label for="fullname">{{'user.new-password' | translate}}</label>
-                        <input type="password" class="form-control" id="_newPass" formControlName="_newPass">
+                  </div>
+                  <div class="mb-3">
+                    <label for="fullname" class="form-label">{{'user.new-password' | translate}}</label>
+                    <div class="input-group">
+                        <input type="password" class="form-control" placeholder="*****" id="_newPass" formControlName="_newPass" aria-describedby="basic-addon1" style="border-right: none;" appShowPassword>
                     </div>
+                  </div>
                     <div class="float-end">
                         <button type="submit" class="btn btn-secondary-success btn-sm"
                             (click)="changePassword()">{{'buttons.update' | translate}}</button>
